--- a/style.css
+++ b/style.css
@@ -27,3 +27,18 @@ a{
 	color:black;
 
 }
+
+#container{
+	width:960px;
+margin:0px auto;
+}
+@media screen and (max-width: 959px) {
+
+#container{
+	width:100px;
+}
+
+
+}
+
+
